# libgourou

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_package.md  vcpkg.json
cmake/: CTestConfig.cmake  Config.cmake.in  Icon.icns  Info.plist.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
cmake/modules/: FindLibreSSL.cmake
include/: Base64.h  CMakeLists.txt  bytearray.h  device.h  drmprocessorclient.h  fulfillment_item.h  libgourou.h  libgourou_common.h  libgourou_log.h  loan_token.h  user.h  user_drm.h
scripts/: setup.sh  update_lib.sh
src/: CMakeLists.txt  bytearray.cpp  device.cpp  fulfillment_item.cpp  libgourou.cpp  loan_token.cpp  pugixml.cpp  user.cpp  user_drm.cpp
utils/: CMakeLists.txt  LICENSE  Makefile  acsmdownloader.cpp  activate.cpp  adept_activate.cpp  adept_loan_mgt.cpp  adept_remove.cpp  drmprocessorclientimpl.cpp  drmprocessorclientimpl.h  launcher.cpp  utils_common.cpp  utils_common.h
